<resources>
    <string name="app_name">COSC341Project</string>


    <!-- Global -->
    <string name="user_data">user_info.txt</string>
    <string name="vendor_data">vendor_info.txt</string>
    <string name="sign_in_type">sign_in_type.txt</string>
    <string name="default_market">default_market.txt</string>
    <string name="default_market_preference">KelownaMarket</string>
    <string name="market_info">market_info.txt</string>
    <string name="cart_info">cart_info.txt</string>
    <string name="inbox_data">inbox.txt</string>
    <string name="customer_display_text">Customer</string>
    <string name="create_account_general">Create Account</string>
    <string name="toast_added_to_cart">Item successfully added to cart</string>
    <string name="toast_request_sent">Request(s) sent to vendors!</string>

    <!-- NavBar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Main Activity -->
    <string name="empty"></string>
    <string name="sign_in_text">Sign-In</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="forgot_password_text">forgot your password?</string>
    <string name="log_in_text">Log in</string>
    <string name="create_account_text">Create Account</string>
    <string name="is_vendor_text">I am a Vendor</string>
    <string name="toast_missing_login_file">Error: Log-in file not found!</string>
    <string name="toast_add_account">Please add an account</string>
    <string name="toast_incorrect_login">Username or password is incorrect</string>

    <!-- Forgot Password Activity -->
    <string name="toast_username_does_not_exist">No account is associated with the Username: %1$s</string>
    <string name="toast_password_changed">Password successfully updated</string>

    <!-- Cust Sign Up Activity -->
    <string name="sign_up_text">Sign-Up</string>
    <string name="return_text">Go Back</string>
    <string name="first_name_hint_text">First Name</string>
    <string name="last_name_hint_text">Last Name</string>
    <string name="email_hint_text">Email Address</string>
    <string name="reenter_password_hint_text">Re-Enter Password</string>
    <string name="create_vendor_account_text">Create Vendor Account</string>

    <!-- Cust Create Account Activity -->
    <string name="toast_empty_spaces">Please fill in all information</string>
    <string name="toast_email_invalid">Email is invalid</string>
    <string name="toast_password_short">Password must be greater than 8 characters</string>
    <string name="toast_password_invalid">Password must contain at least one uppercase, lowercase, number, and special character</string>
    <string name="toast_password_mismatch">Passwords do not match</string>
    <string name="toast_account_creation_success">Success! Username is: %1$s</string>

    <!--Vendor Signup 2 Activity -->
    <string-array name="categories">
        <item>Fruits and Veggies</item>
        <item>Dairy and Eggs</item>
        <item>Meats and Seafood</item>
        <item>Pantry</item>
        <item>Bakery</item>
        <item>Clothing and Textiles</item>
        <item>Health and Beauty</item>
        <item>Pet Care</item>
    </string-array>

    <!--Reviews activity-->
    <string name="back_button_review">Back</string>
    <string name="add_review_button">Add Review</string>

    <!--Add Reviews activity-->
    <string name="review_box_hint">Max 200 Characters</string>
    <string name="back_button_add_review">Back</string>
    <string name="submit_review">Submit</string>
    <string name="oneStar">1</string>
    <string name="twoStar">2</string>
    <string name="threeStar">3</string>
    <string name="fourStar">4</string>
    <string name="fiveStar">5</string>
    <string name="invalid_review">Please select a rating</string>

</resources>
