<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />



    <ImageView
        android:id="@+id/market_image"
        android:layout_width="138dp"
        android:layout_height="118dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/ForgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppinslight"
        android:text="Forgot Password"
        android:textColor="#447806"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customer_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/poppinslight"
        android:text="@string/customer_display_text"
        android:textColor="#121212"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmPassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#447806"
        android:fontFamily="@font/poppinslight"
        android:text="Confirm"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_input" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppinslight"
        android:text="@string/return_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_input" />

    <EditText
        android:id="@+id/username_text_input"
        android:layout_width="347dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="32dp"
        android:background="#FCFFF5"
        android:ems="10"
        android:fontFamily="@font/poorstory"

        android:hint="Username"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ForgotPasswordTitle" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="347dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#FCFFF5"
        android:ems="10"
        android:fontFamily="@font/poorstory"
        android:hint="New Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text_input" />

    <EditText
        android:id="@+id/repeat_password_input"
        android:layout_width="347dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#FCFFF5"
        android:ems="10"
        android:fontFamily="@font/poorstory"

        android:hint="@string/reenter_password_hint_text"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input" />


</androidx.constraintlayout.widget.ConstraintLayout>